.provarCaches/00D5f000005vwGkEAI/objects/rstk__worcpt__c.object
<CustomObject>
    <description>worcpt__c</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>Id</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Inventory division for this work order. It is the division which will be updated upon work order receipt.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divworcpts</relationshipLabel>
        <relationshipName>divworcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_due_date__c</fullName>
        <inlineHelpText>This is the date this work order is due to be completed in order to meet the requirements.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_empl_name__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Employee Name</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>errormessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_hdrordno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>WO Number</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt (Work Order)</relationshipLabel>
        <relationshipName>ZZ_WO_Receipt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>icitem</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt</relationshipLabel>
        <relationshipName>ZZ_WO_Receipt</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_infomessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>infomessage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_itemno__c</fullName>
        <inlineHelpText>This is the Inventory Item Number being produced by this work order.</inlineHelpText>
        <label>Item No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_label_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Label Quantity</inlineHelpText>
        <label>Label Qty</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_loc_comments__c</fullName>
        <inlineHelpText>This is a free form comments field. Comments entered here will be written to the inventory location record resulting from this work order receipt.</inlineHelpText>
        <label>Location Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_locid_display__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location ID</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_locnum__c</fullName>
        <inlineHelpText>This is the Location Number of the Inventory Location where this receipt will be added.</inlineHelpText>
        <label>Inventory Location Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_locsec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Tracking Number</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_loctype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Location Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_lotexpiredate__c</fullName>
        <description>Shown only when the item being received is Lot Controlled and is initialized to the &apos;Lot Expiration Date&apos; value on Work Order to receipt. If &apos;Expiration Date is required&apos; is checked on receiving Inventory Item Master &gt; Misc CC Override tab, then an Expiration Date greater than &apos;today&apos; must be defined.</description>
        <inlineHelpText>Shown when item received = Lot Control &amp; is initialized to &apos;Lot Expiration Date&apos; on WO Receipt. When &apos;Expiration Date is required&apos; is checked on receiving Inv Item Master &gt; Misc CC Override tab, then Expiration Date greater than &apos;today&apos; must be defined.</inlineHelpText>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_lotno__c</fullName>
        <inlineHelpText>When the Parent Item&apos;s Inventory Item Master (or Commodity Code) is set to allow assignment of Lot Numbers at WO Receipt, the Lot Number may be assigned here if not already defined on the WO directly.</inlineHelpText>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_lotserind__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot/Serial Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_num_backflush__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Number of Backflush Components</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_oper__c</fullName>
        <inlineHelpText>This is the routing operation being reported against. To process a work order receipt this must be the last operation on the routing.</inlineHelpText>
        <label>Operation Number</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_order_qty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total quantity being produced on this work order.</inlineHelpText>
        <label>Order Qty</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_ordno__c</fullName>
        <inlineHelpText>Work Order Number</inlineHelpText>
        <label>Order No</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_ordno_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Work Order Number</inlineHelpText>
        <label>Order No</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt (Order No)</relationshipLabel>
        <relationshipName>worcptopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_ovrwostays7__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When checked, Set Work Order as Complete (8)</inlineHelpText>
        <label>Set Work Order as Complete (8)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_password__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Password</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_proj_display__c</fullName>
        <inlineHelpText>This is the Project Number this work order is being produced for. The inventory received from this work order will be moved into inventory for this project.</inlineHelpText>
        <label>Project</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_qty_accept__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the total quantity to be received by this receipt.</inlineHelpText>
        <label>Qty to be Accepted</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_qty_remaining__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>This is the quantity remaining on this work order. This is calculated by the system as Qty Required minus Qty Accepted minus Qty Scrapped.</inlineHelpText>
        <label>Qty Remaining</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_qtyacc__c</fullName>
        <inlineHelpText>Quantity Received</inlineHelpText>
        <label>Qty Received</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_reversecompletelabororder__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable)</inlineHelpText>
        <label>Reverse Complete Labor Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_run_background_ind__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Use Background Task</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_selectedserials__c</fullName>
        <inlineHelpText>Serial Numbers</inlineHelpText>
        <label>Serial Number(s)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__worcpt_selectedworkorders__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>worcpt_selectedworkorders</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__worcpt_serial_text__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Numbers</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt</relationshipLabel>
        <relationshipName>worcpts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_status__c</fullName>
        <inlineHelpText>This is the current status of this work order.</inlineHelpText>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_status_code__c</fullName>
        <inlineHelpText>This is the current status of this work order.</inlineHelpText>
        <label>Status</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_sylocid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>This is the Location ID of the Inventory Location where this receipt will be added.</inlineHelpText>
        <label>Inventory Location ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt</relationshipLabel>
        <relationshipName>worcptopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_txn_comments__c</fullName>
        <inlineHelpText>This is a free-form comments field. Comments entered here will be written to the inventory cost transaction resulting from this work order receipt.</inlineHelpText>
        <label>Transaction Comments</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_txndate__c</fullName>
        <inlineHelpText>The date of the transaction.  Default is today&apos;s date.</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_usrno__c</fullName>
        <inlineHelpText>Associated Manufacturing User</inlineHelpText>
        <label>Mfg User</label>
        <precision>11</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>WBS (Future)</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>worcpt_wocst</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt (worcpt_wocst)</relationshipLabel>
        <relationshipName>ZZ_WO_Receipt1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcpt_woordop__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>WO Operation</inlineHelpText>
        <label>Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt</relationshipLabel>
        <relationshipName>worcptopers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__worcptr_errormessage__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>worcptr_errormessage</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcptr_lotno__c</fullName>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcptr_qty__c</fullName>
        <inlineHelpText>Quantity to Reverse</inlineHelpText>
        <label>Reverse Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__worcptr_srlwoplocs__c</fullName>
        <inlineHelpText>Reverse Serial Numbers</inlineHelpText>
        <label>Reverse Serials</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcptr_txncomment__c</fullName>
        <inlineHelpText>Transaction Comments</inlineHelpText>
        <label>Txn Comment</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__worcptr_woploc__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>worcptr_woploc</label>
        <referenceTo>rstk__woploc__c</referenceTo>
        <relationshipLabel>ZZ-WO Receipt</relationshipLabel>
        <relationshipName>ZZ_WO_Receipt</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ZZ-WO Receipt</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZZ-WO Receipt</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>